--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -8,7 +8,7 @@ cxx_library(
 	FILENAME lexicon.cpp
 )
 
-cxx_library(
+cxx_executable(
 	TARGET debugging_main
 	FILENAME debugging_main.cpp
 	LINK word_ladder
