--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 cxx_library(
 	TARGET test_main
 	FILENAME test_main.cpp
-	LINK Catch2::Catch2
 )
+target_include_directories(test_main PUBLIC .)
 
 add_subdirectory(word_ladder)
