wrote the lexicon now have to write test for the functions

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,8 @@
          "name": "Launch LLDB",
          "program": "${command:cmake.launchTargetPath}",
          "args": [],
-         "cwd": "${workspaceFolder}/build/test/word_ladder",
-         //"cwd": "${workspaceFolder}",
+         //"cwd": "${workspaceFolder}/build/test/word_ladder",
+         "cwd": "${workspaceFolder}",
          "env": {
             "ASAN_OPTIONS": "detect_leaks=0"
          }
