added test to the generate and fixed it so that there are more than 1 solutions

--- a/test/word_ladder/CMakeLists.txt
+++ b/test/word_ladder/CMakeLists.txt
@@ -23,3 +23,9 @@ cxx_test(
    FILENAME word_ladder_test_compareWord.cpp
    LINK word_ladder lexicon test_main
 )
+
+cxx_test(
+   TARGET word_ladder_test_BFS
+   FILENAME word_ladder_test_BFS.cpp
+   LINK word_ladder lexicon test_main
+)
